<resources>
    <string name="app_name">EcommerceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="middleText">The Right Address\nFor Shopping\nAnyday\n</string>
    <string name="belowtxt">It is now very easy to reach the\nbest quality among all the\nproducts on the internet.</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="accountRegister">Don\'t have an account? Register..</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>