<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.IntroductionFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ellips"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEclipseBottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="@id/guidelineEclipseLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineEclipseRight"
        app:layout_constraintTop_toTopOf="@id/guidelineTopEclipse" />

    <TextView
        android:id="@+id/tvMaintxt"
        style="@style/h4"
        android:layout_width="231dp"
        android:layout_height="123dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:text="@string/middleText"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture" />

    <TextView
        android:id="@+id/smallTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        app:layout_constraintTop_toBottomOf="@+id/tvMaintxt"
        app:layout_constraintStart_toStartOf="@+id/tvMaintxt"
        app:layout_constraintEnd_toEndOf="@+id/tvMaintxt"
        android:text="@string/belowtxt"
        android:gravity="center"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/btnWidth"
        android:layout_height="@dimen/btnHeight"
        style="@style/blueButtonStyle"
        app:layout_constraintTop_toBottomOf="@+id/smallTxt"
        app:layout_constraintStart_toStartOf="@+id/smallTxt"
        app:layout_constraintEnd_toEndOf="@+id/smallTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33242133" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEclipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEclipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEclipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTopEclipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />


</androidx.constraintlayout.widget.ConstraintLayout>